<resources>
    <string name="app_name">UwU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_an_item">Add an Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_weight">Item Weight</string>
    <string name="add">Add</string>
    <string name="hat">Hat</string>
    <string name="_0_01">0.01</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="update_an_item">Update an Item</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="kg">kg</string>
</resources>